Bugfix: filter panel now shows at correct width. Bugfix: form now fully visible on all devices

--- a/scss/modules/_all.scss
+++ b/scss/modules/_all.scss
@@ -23,7 +23,7 @@ main{
 }
 
 .invisibleFilters{
-  @media (max-width: 768px) {
+  @media (max-width: 767px) {
     display: none;
     visibility: hidden;
     height: 0;
